@@ -1046,71 +1046,6 @@ void get_adt746x_cpu(char *p_client_buffer, size_t client_buffer_size)
 	snprintf(p_client_buffer, client_buffer_size, "%s", adt746x_cpu_state);
 }
 
-/* Thanks to "Walt Nelson" <wnelsonjr@comcast.net> */
-
-/***********************************************************************/
-/* This file is part of x86info.
- * (C) 2001 Dave Jones.
- *
- * Licensed under the terms of the GNU GPL License version 2.
- *
- * Estimate CPU MHz routine by Andrea Arcangeli <andrea@suse.de>
- * Small changes by David Sterba <sterd9am@ss1000.ms.mff.cuni.cz> */
-
-#if  defined(__i386) || defined(__x86_64)
-unsigned long long int rdtsc(void)
-{
-	unsigned long long int x;
-	unsigned int a, d;
-
-	__asm__ volatile(".byte 0x0f, 0x31":"=a" (a),"=d" (d));
-	x = d;
-	return x << 32 | a;
-}
-#endif
-
-/* return system frequency in MHz (use divisor=1) or GHz (use divisor=1000) */
-void get_freq_dynamic(char *p_client_buffer, size_t client_buffer_size,
-		const char *p_format, int divisor)
-{
-#if  defined(__i386) || defined(__x86_64)
-	struct timezone tz;
-	struct timeval tvstart, tvstop;
-	unsigned long long cycles[2];	/* gotta be 64 bit */
-	unsigned int microseconds;	/* total time taken */
-
-	if (!p_client_buffer || client_buffer_size <= 0 || !p_format
-			|| divisor <= 0) {
-		return;
-	}
-
-	memset(&tz, 0, sizeof(tz));
-
-	/* get this function in cached memory */
-	gettimeofday(&tvstart, &tz);
-	cycles[0] = rdtsc();
-	gettimeofday(&tvstart, &tz);
-
-	/* we don't trust that this is any specific length of time */
-	usleep(100);
-	cycles[1] = rdtsc();
-	gettimeofday(&tvstop, &tz);
-	microseconds = ((tvstop.tv_sec - tvstart.tv_sec) * 1000000) +
-		(tvstop.tv_usec - tvstart.tv_usec);
-
-	snprintf(p_client_buffer, client_buffer_size, p_format,
-		(float) ((cycles[1] - cycles[0]) / microseconds) / divisor);
-	return;
-#else
-	/* FIXME: hardwired: get freq for first cpu!
-	 * this whole function needs to be rethought and redone for
-	 * multi-cpu/multi-core/multi-threaded environments and
-	 * arbitrary combinations thereof */
-	get_freq(p_client_buffer, client_buffer_size, p_format, divisor, 1);
-	return;
-#endif
-}
-
 #define CPUFREQ_PREFIX "/sys/devices/system/cpu"
 #define CPUFREQ_POSTFIX "cpufreq/scaling_cur_freq"
 
